--- a/app/src/main/res/layout/activity_local_video.xml
+++ b/app/src/main/res/layout/activity_local_video.xml
@@ -38,7 +38,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
             android:background="@drawable/btn_edit_next_bg"
-            android:text="下一步"
+            android:text="next"
             android:textColor="@color/white" />
     </RelativeLayout>
     <FrameLayout
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"/>-->
     <TextView
         android:id="@+id/local_sel_time_tv"
-        android:text="已选取30秒"
+        android:text="30 seconds selected"
         android:textColor="@color/white"
         android:layout_above="@+id/local_frame_layout"
         android:layout_marginBottom="20dp"
