--- a/app/src/main/res/layout/activity_primary_media_codec.xml
+++ b/app/src/main/res/layout/activity_primary_media_codec.xml
@@ -15,7 +15,7 @@
 
     <Button
         android:id="@+id/btn_recording"
-        android:text="开始录制"
+        android:text="Start recording"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -29,5 +29,5 @@
         android:id="@+id/btn_watch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="查看视频"/>
+        android:text="View video"/>
 </FrameLayout>
