--- a/app/src/main/res/layout/activity_record_base_camera.xml
+++ b/app/src/main/res/layout/activity_record_base_camera.xml
@@ -18,12 +18,12 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_record_base_status"
-            android:text="开始录制"
+            android:text="Start recording"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/btn_record_base_player"
-            android:text="播放"
+            android:text="Play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
