--- a/app/src/main/res/layout/activity_sel_cover_time.xml
+++ b/app/src/main/res/layout/activity_sel_cover_time.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="选择封面"
+            android:text="Select cover"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
@@ -37,7 +37,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
             android:background="@drawable/btn_edit_next_bg"
-            android:text="完成"
+            android:text="carry out"
             android:textColor="@color/white" />
     </RelativeLayout>
     <FrameLayout
@@ -60,7 +60,7 @@
         android:layout_marginTop="20dp"
         android:textSize="12sp"
         android:textColor="@color/white"
-        android:text="已选封面"
+        android:text="Selected cover"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <FrameLayout
