--- a/app/src/main/res/layout/activity_video_edit.xml
+++ b/app/src/main/res/layout/activity_video_edit.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="编辑影片"
+            android:text="Edit video"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
@@ -38,7 +38,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
             android:background="@drawable/btn_edit_next_bg"
-            android:text="下一步"
+            android:text="Next"
             android:textColor="@color/white" />
     </RelativeLayout>
 
@@ -68,7 +68,7 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/camera_sticker"
             android:gravity="center"
-            android:text="贴纸"
+            android:text="Sticker"
             android:textColor="@color/white" />
 
         <TextView
@@ -78,18 +78,18 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/camera_subtitle"
             android:gravity="center"
-            android:text="字幕"
+            android:text="subtitle"
             android:textColor="@color/white" />
 
         <TextView
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/ll_add_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@drawable/emoji_04"
             android:gravity="center"
-            android:text="滤镜"
+            android:text="Filter"
             android:textColor="@color/white" />
     </LinearLayout>
 
