--- a/app/src/main/res/layout/bigflake_item.xml
+++ b/app/src/main/res/layout/bigflake_item.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent">
     <Button
         android:id="@+id/start"
-        android:text="开始录制"
+        android:text="Start recording"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/player"
         android:layout_gravity="right"
-        android:text="播放"
+        android:text="Play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </FrameLayout>
