--- a/app/src/main/res/layout/pop_bubble_edit_view.xml
+++ b/app/src/main/res/layout/pop_bubble_edit_view.xml
@@ -27,7 +27,7 @@
             android:background="@null"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:hint="请输入内容"
+            android:hint="Please enter content"
             android:textColorHint="#454545"
             android:textSize="14sp" />
 
@@ -40,7 +40,7 @@
             android:layout_marginRight="20dp"
             android:padding="5dp"
             android:background="@drawable/color_fc4253_radius_7_bg"
-            android:text="确认"
+            android:text="Done"
             android:textColor="#454545" />
     </RelativeLayout>
 
