--- a/app/src/main/res/layout/pop_myreport_view.xml
+++ b/app/src/main/res/layout/pop_myreport_view.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="选择举报的内容"
+            android:text="Choose what to report"
             android:textColor="@color/colorWhite100"
             android:textSize="18sp" />
 
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="8dp"
-                    android:text="发布色情内容"
+                    android:text="Post pornographic content"
                     android:textColor="@color/colorWhite100"
                     android:textSize="16sp" />
 
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="8dp"
-                    android:text="发布暴力内容"
+                    android:text="Post violent content"
                     android:textColor="@color/colorWhite100"
                     android:textSize="16sp" />
 
@@ -106,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="8dp"
-                    android:text="被骚扰"
+                    android:text="Harassed"
                     android:textColor="@color/colorWhite100"
                     android:textSize="16sp" />
 
@@ -128,7 +128,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/color_fc4253_radius_7_bg"
-            android:text="提交"
+            android:text="submit"
             android:textColor="#eefcfe"
             android:textSize="15sp" />
 
