--- a/app/src/main/res/layout/vw_layout_top_bar.xml
+++ b/app/src/main/res/layout/vw_layout_top_bar.xml
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="确认"
+            android:text="confirm"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
     </RelativeLayout>
