--- a/app/src/main/res/layout/activity_video_player2.xml
+++ b/app/src/main/res/layout/activity_video_player2.xml
@@ -78,7 +78,7 @@
             android:id="@+id/video_player2_sel_cover"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="选封面"
+            android:text="Select cover"
             android:shadowColor="@color/black_50"
             android:shadowDy="0"
             android:shadowDx="0"
@@ -98,7 +98,7 @@
             android:shadowDy="0"
             android:shadowDx="0"
             android:shadowRadius="10"
-            android:text="编辑"
+            android:text="edit"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:drawableTop="@drawable/bt_clip"
